--- a/ux/src/theme/variables.scss
+++ b/ux/src/theme/variables.scss
@@ -34,14 +34,15 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #a89374,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  background: #b79f77
 );
 
-
+$toolbar-background: #444;
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
@@ -86,3 +87,7 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+
+
+
