building the pages

--- a/ux/src/pages/creature-search/creature-search.scss
+++ b/ux/src/pages/creature-search/creature-search.scss
@@ -1,3 +1,14 @@
 page-creature-search {
+    .monster-name{
+        font-size: 24px;
+        color:#654;
+        font-family: cursive;
+        font-weight: 900;
+    }
 
+    .monster-cr{
+        color: #765;
+        font-size: 15px;
+        font-weight: 900;
+    }
 }
