--- a/ux/src/theme/variables.scss
+++ b/ux/src/theme/variables.scss
@@ -43,6 +43,8 @@ $colors: (
 );
 
 $toolbar-background: #444;
+$list-background-color: #E0C9B9;
+$background-color: #BDA38D;
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
